
* link:../use/manage-apps.html#tech-preview-define-an-application-using-a-kubernetes-custom-resource["Defina una aplicación mediante un recurso personalizado"]
* link:../use/manage-buckets.html#tech-preview-manage-a-bucket-using-a-custom-resource["Defina el período"]
* link:../use/protect-apps.html#create-a-backup["Realice una copia de seguridad de su aplicación"]
* link:../use/protect-apps.html#create-a-snapshot["Crear una copia de Snapshot"]
* link:../use/protect-apps.html#configure-a-protection-policy["Crear programaciones para Snapshot o backups"]
* link:../use/restore-apps.html["Restaure una aplicación desde una copia Snapshot o un backup"]




== 7 de noviembre de 2023 (23.10.0)

[[nas-eco-backup-restore]]
.Nuevas funciones y soporte
* * Capacidades de copia de seguridad y restauración para aplicaciones con backends de almacenamiento respaldados por controladores de economía ontap-nas*: Permite operaciones de copia de seguridad y restauración para `ontap-nas-economy` con algunos https://docs.netapp.com/us-en/astra-control-center-2310/use/protect-apps.html#enable-backup-and-restore-for-ontap-nas-economy-operations["sencillos pasos"^].
* *Copias de seguridad inmutables*: Astra Control ahora es compatible https://docs.netapp.com/us-en/astra-control-center-2310/concepts/data-protection.html#immutable-backups["backups de solo lectura que se pueden modificar"^] como capa de seguridad adicional contra el malware y otras amenazas.
* *Presentamos Astra Control Provisionador*
+
Con el lanzamiento 23,10, Astra Control introduce un nuevo componente de software llamado Astra Control Provisioning que estará disponible para todos los usuarios con licencia de Astra Control. Astra Control Provisioning ofrece acceso a un superconjunto de funciones avanzadas de aprovisionamiento de almacenamiento y gestión más allá de las que ofrece Astra Trident. Estas funciones están disponibles para todos los clientes de Astra Control sin coste adicional.

+