@@ -3616,12 +3616,6 @@ Astra Control Provisioning se instala automáticamente como parte del proceso de
   <block id="0db934fe5d747898582ef7b2fe037806" category="list-text">Cloud con Cloud Volumes ONTAP a las instalaciones</block>
   <block id="e83e31033bbd8a95537d872ec339409c" category="list-text">* Seguridad de backend de almacenamiento mejorada con cifrado Kerberos 5*: Puede mejorar la seguridad del almacenamiento<block ref="0a6b595cfc16ab1c35e55d5e4c214ee8" category="inline-link-rx"></block> para el tráfico entre el clúster gestionado y el back-end de almacenamiento. El aprovisionador de control de Astra admite el cifrado de Kerberos 5 a través de conexiones NFSv4,1 GbE desde clústeres de Red Hat OpenShift a volúmenes Azure NetApp Files y ONTAP en las instalaciones</block>
   <block id="ac40c2ee060ee67bf0598e61daec4365" category="paragraph"><block ref="ac40c2ee060ee67bf0598e61daec4365" category="inline-image-macro-rx" type="image"></block></block>
-  <block id="2f2aafd7c2fcb81833aa47c5d9ab32fe" category="section-title">[Tech preview] Cree un backup programado de espacios de nombres</block>
-  <block id="765c75085cad598d9581b676be1b0e58" category="paragraph">Es posible crear un backup programado y automático de cualquiera de los espacios de nombres o de todos ellos en un clúster. Estos flujos de trabajo son proporcionados por NetApp como archivos CR emparejados con un script Python. Al configurar e instalar los flujos de trabajo, los backups de espacio de nombres se crean automáticamente según la programación que elija durante la instalación. Es posible proteger todos los espacios de nombres de un clúster con el flujo de trabajo de backup de clústeres completo, o solo ciertos espacios de nombres con el flujo de trabajo de backup basado en etiquetas.</block>
-  <block id="7ac3cce973f2aa843ace7b4ab0c5bb23" category="paragraph">Cuando se agrega al clúster un nuevo espacio de nombres o una aplicación que se encuentra dentro del alcance de la programación de copias de seguridad, se protege de forma automática.</block>
-  <block id="261a331215e56ec7ab44a013797d15c5" category="paragraph-title">Ejemplo: Backup completo del clúster</block>
-  <block id="737358b56d0c0cdf08e1375d277d2218" category="paragraph">Un ejemplo: Cuando configura e instala el flujo de trabajo de backup completo del clúster, el administrador realiza un backup periódico de las aplicaciones en cualquier espacio de nombres sin que el administrador lo haga. El espacio de nombres no tiene que existir en el momento de instalar el flujo de trabajo; si se agrega un espacio de nombres en el futuro, se protegerá.</block>
-  <block id="22359a586ea8864de01cfa7e01782716" category="paragraph-title">Ejemplo: Backup basado en etiquetas</block>
   <block id="ab9b4add4c2750df9ea518f6cfe58c09" category="paragraph">Para obtener más granularidad, puede utilizar el flujo de trabajo basado en etiquetas. Por ejemplo, puede instalar este flujo de trabajo y decirle a los usuarios que apliquen una de varias etiquetas a cualquier espacio de nombres que quieran proteger, según el nivel de protección que necesiten. Esto permite a los usuarios crear el espacio de nombres con una de estas etiquetas, y no tienen que notificar a un administrador. Su nuevo espacio de nombres y todas las aplicaciones que contiene quedan protegidas de forma automática.</block>
   <block id="07b045e6ed11320210f203c982fd829d" category="section-title">Cree una copia de seguridad programada de todos los espacios de nombres</block>
   <block id="8332335e5e8bddc0b81921741539149a" category="paragraph">Es posible crear un backup programado de todos los espacios de nombres en un clúster mediante el flujo de trabajo de backup de clúster completo.</block>
@@ -3721,4 +3715,5 @@ Astra Control Provisioning se instala automáticamente como parte del proceso de
   <block id="e84bb7e947a5b25481546110f575734a" category="list-text"><block ref="e84bb7e947a5b25481546110f575734a" category="inline-link-rx"></block></block>
   <block id="5858ee4031acd7b896faa2d3d2c1a299" category="inline-link">Documentación de Cloud Insights</block>
   <block id="2b93b48daf034e4100d00b85950e109d" category="list-text"><block ref="2b93b48daf034e4100d00b85950e109d" category="inline-link-rx"></block></block>
+  <block id="adeac59ad1862a3e0c4f40cfe863ae90" category="list-text"><block ref="adeac59ad1862a3e0c4f40cfe863ae90" category="inline-link-macro-rx"></block></block>
 </blocks>
