@@ -27,6 +27,8 @@ indexpage:
       url: "/use/manage-apps.html"
     - title: Proteja sus aplicaciones
       url: "/use/protect-apps.html"
+    - title: Proteja todo un clúster
+      url: "/use/back-up-full-cluster.html"
     - title: Clone y migre aplicaciones
       url: "/use/clone-apps.html"
     - title: Replicación de aplicaciones en un sistema remoto
