@@ -35,6 +35,7 @@ Después de instalar el link:../get-started/install-astra-connector.html["Conect
 
 * link:../use/manage-apps.html#tech-preview-define-an-application-using-a-kubernetes-custom-resource["Defina una aplicación mediante un recurso personalizado"]
 * link:../use/manage-buckets.html#tech-preview-manage-a-bucket-using-a-custom-resource["Defina el período"]
+* link:../use/back-up-full-cluster.html["Proteja todo un clúster"]
 * link:../use/protect-apps.html#create-a-backup["Realice una copia de seguridad de su aplicación"]
 * link:../use/protect-apps.html#create-a-snapshot["Crear una copia de Snapshot"]
 * link:../use/protect-apps.html#configure-a-protection-policy["Crear programaciones para Snapshot o backups"]
